crates/vize_atelier_sfc/src/compile/tests/snapshots/vize_atelier_sfc__compile__tests__define_props_regressions__script_setup_sfc_vapor_props_object_reference_stays_on_ctx.snap
---
source: crates/vize_atelier_sfc/src/compile/tests/define_props_regressions.rs
expression: result.code.as_str()
---
import { defineVaporComponent as _defineVaporComponent, proxyRefs as _proxyRefs } from 'vue'
import { createFor as _createFor, template as _template } from 'vue';

const t0 = _template("<li></li>")

function render(_ctx, $props, $emit, $attrs, $slots, $setup) {
  const n0 = _createFor(() => (['a']), (_for_item0) => {
    const n2 = t0()
    return n2
  }, (item) => (_ctx.props.itemKey(item)))
  return n0
}
const __vaporRender = render

export default /*@__PURE__*/_defineVaporComponent({
  __name: 'anonymous',
  props: {
    itemKey: { type: Function, required: true }
  },
  render: __vaporRender,
  setup(__props: any, { emit: __emit, attrs: __attrs, slots: __slots }) {

const props = __props;

const __returned__ = { props }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __ctx = _proxyRefs(__returned__)
return __vaporRender(__ctx, __props, __emit, __attrs, __slots, __returned__)
}

})
